tests/ui/lint/snapshots/negative_index_on_array.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Negative index
   ╭─[test.lis:3:5]
 2 │ fn at(xs: Array<int, 3>) -> int {
 3 │   xs[-1]
   ·     ──┬─
   ·       ╰── index is negative
 4 │ }
   ╰────
  help: `-1` is negative, but indices must be zero or greater · code: [infer.negative_index]
