tests/ui/lint/snapshots/negative_index_on_slice.snap
---
source: tests/ui/lint/mod.rs
---
  ✕ Negative index
   ╭─[test.lis:3:5]
 2 │ fn at(xs: Slice<int>) -> int {
 3 │   xs[-1]
   ·     ──┬─
   ·       ╰── index is negative
 4 │ }
   ╰────
  help: `-1` is negative, but indices must be zero or greater · code: [infer.negative_index]
