tests/ui/lint/snapshots/rest_only_pattern_array.snap
---
source: tests/ui/lint/mod.rs
---
  ● Ineffective pattern
   ╭─[test.lis:3:7]
 2 │ pub fn test(arr: Array<int, 3>) {
 3 │   let [..all] = arr;
   ·       ───┬───
   ·          ╰── always matches
 4 │   let _ = all
   ╰────
  help: Use `let all` instead · code: [lint.rest_only_pattern]
