tests/ui/lint/snapshots/tailcall_call_wrapped_in_cast_is_not_tail.snap
---
source: tests/ui/lint/mod.rs
assertion_line: 8303
---
  [info] Redundant cast
   ╭─[test.lis:7:5]
 6 │   } else {
 7 │     bad(n - 1) as int
   ·     ────────┬────────
   ·             ╰── casting `int` to itself has no effect
 8 │   }
   ╰────
  help: Remove the unnecessary cast · code: [infer.redundant_cast]
