tests/ui/lint/snapshots/tailcall_inside_loop_is_not_tail.snap
---
source: tests/ui/lint/mod.rs
assertion_line: 8319
---
  [error] Recursive call to `bad` is not in tail position
   ╭─[test.lis:5:5]
 4 │   loop {
 5 │     bad(n - 1)
   ·     ─────┬────
   ·          ╰── this call result is consumed before returning
 6 │   }
   ╰────
  help: A tail call's result must be returned directly. Move work that follows the call into the recursive arguments, or remove `#[tailcall]` · code: [infer.tailcall_not_in_tail_position]
